<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Signup.SignUpTwo">

        <TextView
            android:id="@+id/SignUpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="236dp"
            android:text="@string/moreDet"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearsInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/years_of_experience"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUpTV">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/yearsEditText"
                android:layout_width="250dp"
                android:singleLine="true"
                android:inputType="number"
                android:nextFocusForward="@id/phoneEditText"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearsInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:nextFocusForward="@id/hourEditText"
                android:inputType="number"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/payInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="32dp"
            android:text="@string/your_pay_info"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hourInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="12dp"
            android:hint="@string/per_hour"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hourEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusForward="@id/dayEditText"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dayInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/per_day"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dayEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tapLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/noLogin"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourInputLayout" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tapLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>