<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".Activities.EditProfile">

        <TextView
            android:id="@+id/EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:nextFocusForward="@id/genderInputLayout"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/age"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderInputLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusForward="@id/yearsInputLayout"
                android:singleLine="true"
                android:textColor="@color/black"
                tools:layout_editor_absoluteX="84dp"
                tools:layout_editor_absoluteY="308dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearsInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/years_of_experience"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/yearsEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="@color/white"
            android:hint="@string/occupation"
            android:padding="20dp"
            app:boxStrokeColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearsInputLayout">

            <AutoCompleteTextView
                android:id="@+id/dropdown_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="none"
                android:nextFocusForward="@id/hourEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/payInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="28dp"
            android:text="@string/your_pay_info"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hourInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="4dp"
            android:hint="@string/per_hour"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hourEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:nextFocusForward="@id/dayInputLayout"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dayInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="76dp"
            android:hint="@string/per_day"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dayEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genderInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/gender"
            android:textColorHint="@color/grey"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/grey"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genderEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:nextFocusForward="@id/ageInputLayout"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>